<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register">

    <TextView
        android:id="@+id/welcome_back_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/adventure_map_image"
        app:layout_constraintStart_toStartOf="@+id/adventure_map_image"
        app:layout_constraintTop_toBottomOf="@+id/adventure_map_image"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/adventure_map_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Adventure map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/undraw_adventure_map_hnin_2" />

    <TextView
        android:id="@+id/register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_back_title"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/welcome_back_title"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_email_field"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Valid email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_full_name_field"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/register_full_name_field"
        app:layout_constraintTop_toBottomOf="@+id/register_full_name_field"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/register_password_field"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Strong Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_phone_field"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/register_phone_field"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_field"
        app:layout_constraintVertical_bias="0.050000012" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tos_compliance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_password_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_password_field"
        app:layout_constraintTop_toBottomOf="@+id/register_password_field"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_password_field"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/register_password_field"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/already_a_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_member"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/log_in_link"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.23000002" />

    <EditText
        android:id="@+id/register_phone_field"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_email_field"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/register_email_field"
        app:layout_constraintTop_toBottomOf="@+id/register_email_field"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/register_full_name_field"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Full name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_desc"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/register_desc"
        app:layout_constraintTop_toBottomOf="@+id/register_desc"
        app:layout_constraintVertical_bias="0.102" />

</androidx.constraintlayout.widget.ConstraintLayout>